# tutorly-platform

./: README.md
backend/: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  alembic.ini  prd.md  pyproject.toml  requirements.txt  run_server.py  setup.sh  test_slot_resize.py
backend/app/: main.py
backend/app/application/: __init__.py
backend/app/application/use_cases/: __init__.py
backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
backend/app/database/: connection.py  models.py  seed_subjects.py
backend/app/database/migrations/: README  __init__.py  env.py
backend/app/domains/admin/: __init__.py
backend/app/domains/classroom/: __init__.py
backend/app/domains/file/: __init__.py
backend/app/domains/messaging/: __init__.py
backend/app/domains/payment/: __init__.py
backend/app/domains/scheduling/: __init__.py
backend/app/domains/wallet/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/payment_gateways/: __init__.py  mock_gateway.py  razorpay_gateway.py
backend/app/infrastructure/persistence/: __init__.py  sqlalchemy_models.py
backend/app/infrastructure/repositories/: __init__.py  availability_repository_impl.py  booking_slot_repository_impl.py  classroom_repository_impl.py  conversation_repository_impl.py  education_repository_impl.py  experience_repository_impl.py  file_repository_impl.py  instructor_repository_impl.py  instructor_subject_repository_impl.py  (+9 more)
backend/app/routers/: __init__.py  admin.py  auth.py  booking.py  calendar.py  classroom.py  instructor.py  messaging.py  student_dashboard.py  subjects.py  upload.py  wallet.py  websocket.py
backend/app/utils/: datetime_utils.py  file_validation.py  image_optimization.py
backend/docs/: PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  v1_implementation.md
backend/tests/: test_100ms_classroom.py  test_auth_flow.py  test_booking_flow.py  test_daily_classroom.py
frontend/: App.tsx  (+7 more)
(+302 files in other folders)
