[project]
name = "tutorly-platform-backend"
version = "0.1.0"
description = "Backend service for Tutorly - Online Tutoring Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # Database
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    # Data Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    # Payment Processing
    "stripe>=7.4.0",
    # Email
    "sendgrid>=6.11.0",
    # File Storage & Processing
    "boto3>=1.34.0",
    "pillow>=10.1.0",
    "python-magic>=0.4.27",
    "aiofiles>=23.2.1",
    # Background Tasks
    "celery>=5.3.4",
    "redis>=5.0.1",
    # WebSocket
    "websockets>=12.0",
    # HTTP Client
    "httpx>=0.25.2",
    # Utilities
    "python-dotenv>=1.0.0",
    "pytz>=2023.3",
    "razorpay>=2.0.0",
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.1",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["py.typed"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
